feat: support user configured compression on grpc server

--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -29,8 +29,8 @@ rpc_max_recv_message_size = "512MB"
 ## The maximum send message size for gRPC server.
 rpc_max_send_message_size = "512MB"
 
-## Enable gzip compression for gRPC
-enable_gzip_compression = false
+## Supported compression encoding for gRPC server, e.g: gzip, zstd
+rpc_accept_compressed = []
 
 ## Enable telemetry to collect anonymous usage data.
 enable_telemetry = true
