--- a/src/metric-engine/Cargo.toml
+++ b/src/metric-engine/Cargo.toml
@@ -19,6 +19,7 @@ common-recordbatch.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 datafusion.workspace = true
+datafusion-expr.workspace = true
 datatypes.workspace = true
 itertools.workspace = true
 lazy_static = "1.4"
