--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -18,6 +18,7 @@ common-query.workspace = true
 common-recordbatch.workspace = true
 common-wal.workspace = true
 datafusion-physical-plan.workspace = true
+datafusion-expr.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
