--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -337,6 +337,19 @@ jobs:
         with:
           target: ${{ matrix.target }}
           max-total-time: 120
+      - name: Export kind logs
+        if: failure()
+        shell: bash
+        run: | 
+          kind export logs /tmp/kind
+      - name: Upload logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: fuzz-tests-kind-logs-${{ matrix.target }}
+          path: /tmp/kind
+          retention-days: 3
+        
 
   sqlness:
     name: Sqlness Test
