--- a/.github/actions/setup-greptimedb-cluster/action.yml
+++ b/.github/actions/setup-greptimedb-cluster/action.yml
@@ -58,27 +58,17 @@ runs:
   - name: Wait for GreptimeDB
     shell: bash
     run: |
-      sleep 5s
-      kubectl get pods -n my-greptimedb
-      kubectl wait \
-        --for=condition=Ready \
-        pod -l app.greptime.io/component=my-greptimedb-meta \
-        --timeout=120s \
-        -n my-greptimedb
-      sleep 5s
-      kubectl get pods -n my-greptimedb
-      kubectl wait \
-        --for=condition=Ready \
-        pod -l app.greptime.io/component=my-greptimedb-datanode \
-        --timeout=120s \
-        -n my-greptimedb
-      sleep 5s
-      kubectl get pods -n my-greptimedb
-      kubectl wait \
-        --for=condition=Ready \
-        pod -l app.greptime.io/component=my-greptimedb-frontend \
-        --timeout=120s \
-        -n my-greptimedb
+      while true; do 
+        PHASE=$(kubectl -n my-greptimedb get gtc my-greptimedb -o jsonpath='{.status.clusterPhase}')
+        if [ "$PHASE" == "Running" ]; then
+          echo "Cluster is ready"
+          break
+        else
+          echo "Cluster is not ready yet: Current phase: $PHASE"
+          kubectl get pods -n my-greptimedb
+          sleep 5 # wait for 5 seconds before check again.
+        fi
+      done
   - name: Print GreptimeDB info
     if: always()
     shell: bash
