fix: avoid logging guard drop

--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -74,6 +74,7 @@ substrait.workspace = true
 table.workspace = true
 tokio.workspace = true
 toml.workspace = true
+tracing-appender = "0.2"
 
 [target.'cfg(not(windows))'.dependencies]
 tikv-jemallocator = "0.5"
