--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -337,6 +337,11 @@ jobs:
         with:
           target: ${{ matrix.target }}
           max-total-time: 120
+      - name: Describe Nodes
+        if: failure()
+        shell: bash
+        run: | 
+          kubectl describe nodes      
       - name: Export kind logs
         if: failure()
         shell: bash
