--- a/src/frontend/Cargo.toml
+++ b/src/frontend/Cargo.toml
@@ -68,5 +68,5 @@ datanode.workspace = true
 futures = "0.3"
 meta-srv = { workspace = true, features = ["mock"] }
 strfmt = "0.2"
-tower = "0.4"
+tower.workspace = true
 uuid.workspace = true
