Make greptime buildable with opendal 0.46 (#5)
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -57,6 +57,7 @@ substrait.workspace = true
 table.workspace = true
 tokio.workspace = true
 tonic.workspace = true
+tokio-util.workspace = true
 
 [dev-dependencies]
 common-test-util.workspace = true
