build(deps): upgrade promql-parser to 0.4
Signed-off-by: tison <wander4096@gmail.com>

--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -48,7 +48,7 @@ object-store.workspace = true
 once_cell.workspace = true
 prometheus.workspace = true
 promql.workspace = true
-promql-parser = "0.1.1"
+promql-parser.workspace = true
 regex.workspace = true
 session.workspace = true
 snafu.workspace = true
