--- a/src/promql/Cargo.toml
+++ b/src/promql/Cargo.toml
@@ -28,7 +28,7 @@ greptime-proto.workspace = true
 itertools.workspace = true
 lazy_static.workspace = true
 prometheus.workspace = true
-promql-parser = "0.1.1"
+promql-parser.workspace = true
 prost.workspace = true
 session.workspace = true
 snafu.workspace = true
