--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -8,6 +8,15 @@ enable_telemetry = true
 ## +toml2docs:none-default
 default_timezone = "UTC"
 
+## The runtime options.
+[runtime]
+## The number of threads to execute the runtime for global read operations.
+read_rt_size = 8
+## The number of threads to execute the runtime for global write operations.
+write_rt_size = 8
+## The number of threads to execute the runtime for global background operations.
+bg_rt_size = 8
+
 ## The HTTP server options.
 [http]
 ## The address to bind the HTTP server.
