--- a/tests/runner/Cargo.toml
+++ b/tests/runner/Cargo.toml
@@ -10,7 +10,7 @@ workspace = true
 [dependencies]
 async-trait = "0.1"
 clap.workspace = true
-client.workspace = true
+client = { workspace = true, features = ["testing"] }
 common-error.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
@@ -19,7 +19,5 @@ serde.workspace = true
 serde_json.workspace = true
 sqlness = { version = "0.5" }
 tempfile.workspace = true
-# TODO depend `Database` client
-tests-integration.workspace = true
 tinytemplate = "1.2"
 tokio.workspace = true
